--- a/index.html
+++ b/index.html
@@ -20,9 +20,17 @@
       <div class="buttons">
         <a href="#" class="btn btn-primary" role="button" id="share">分享到 Facebook</a>
       </div>
-      <div class="link hide">
-        你的貼圖已經發佈到 Facebook，<a href="" id="shared-link">按這裡去看看</a>！
+
+      <div class="modal fade shared-link-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
+        <div class="modal-dialog modal-md" role="document">
+          <div class="modal-content">
+            <div class="modal-body">
+              你的貼圖已經發佈到 Facebook，<a href="" target="_blank" id="shared-link">按這裡去看看</a>！
+            </div>
+          </div>
+        </div>
       </div>
+
     </div>
     <div id="fb-root"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
