--- a/index.html
+++ b/index.html
@@ -1,7 +1,12 @@
 <!DOCTYPE html>
 <html lang="zh">
   <head>
-    <title></title>
+    <title>小孩標語，大人決定？</title>
+    <meta property="og:title" content="小孩標語，大人決定？" />
+    <meta property="og:description" content="小孩真的想要的，並不是你硬塞給他一個標語給他。" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://yurenju.github.io/youknownothing" />
+    <meta property="og:image" content="https://yurenju.github.io/youknownothing/original.png" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
