--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
       </div>
 
     </div>
+    <div class="footer">
+      插畫：{待確認} |
+      Github: <a href="https://github.com/yurenju/youknownothing" target="_blank">yurenju/youknownothing</a>
+    </div>
     <div id="fb-root"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
