--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://yurenju.github.io/youknownothing" />
     <meta property="og:image" content="https://yurenju.github.io/youknownothing/original.jpg" />
+    <meta property="fb:app_id" content="390592127957211" />
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no">
