added slash to og:url

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="小孩標語，大人決定？" />
     <meta property="og:description" content="小孩真的想要的，並不是你硬塞給他一個標語給他。" />
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://yurenju.github.io/youknownothing" />
+    <meta property="og:url" content="https://yurenju.github.io/youknownothing/" />
     <meta property="og:image" content="https://yurenju.github.io/youknownothing/original.jpg" />
     <meta property="fb:app_id" content="390592127957211" />
     <meta charset="UTF-8">
