--- a/index.html
+++ b/index.html
@@ -16,6 +16,9 @@
     <link href="main.css" rel="stylesheet" title="Default Style">
   </head>
   <body>
+    <div class="header">
+      <h1>小孩，不是你的工具。</h1>
+    </div>
     <div class="container">
       <div style="text-align: center;">
         <canvas id="canvas"></canvas>
@@ -39,12 +42,13 @@
 
     </div>
     <div class="footer">
-      插畫：{待確認} |
+      插畫：<a href="https://www.facebook.com/HsiehTungLin/" target="_blank">謝東霖 Hsieh Tung Lin</a> |
       Github: <a href="https://github.com/yurenju/youknownothing" target="_blank">yurenju/youknownothing</a>
     </div>
     <div id="fb-root"></div>
     <script src="https://code.jquery.com/jquery-3.1.1.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="hidpi-canvas.min.js"></script>
     <script src="base64-binary.js"></script>
     <script src="main.js"></script>
   </body>
