Add warning message

--- a/index.html
+++ b/index.html
@@ -29,6 +29,9 @@
       <div class="buttons">
         <a href="#" class="btn btn-primary" role="button" id="share">分享到 Facebook</a>
       </div>
+      <div class="alert alert-danger" role="alert">
+        抱歉，Facebook 分享功能因技術問題暫時無法使用，正在聯絡 Facebook 尋求解決方案。
+      </div>
 
       <div class="modal fade shared-link-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
         <div class="modal-dialog modal-md" role="document">
