added upload to fb back

--- a/index.html
+++ b/index.html
@@ -28,10 +28,7 @@
       </form>
       <div class="buttons">
         <a href="#" class="btn btn-default" role="button" id="download">下載</a>
-        <a href="#" class="btn btn-primary disabled" role="button" id="share">分享到 Facebook</a>
-      </div>
-      <div class="alert alert-danger" role="alert">
-        抱歉，Facebook 分享功能因技術問題暫時無法使用，正在聯絡 Facebook 尋求解決方案。
+        <a href="#" class="btn btn-primary" role="button" id="share">分享到 Facebook</a>
       </div>
 
       <div class="modal fade shared-link-modal" tabindex="-1" role="dialog" aria-labelledby="mySmallModalLabel">
